# TeV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: getASIO.cmake
examples/builder/: CMakeLists.txt  echoClient.cxx  echoServer.cxx
examples/echoHeader/: CMakeLists.txt  echoClient.cxx  echoServer.cxx
examples/echoNulTer/: CMakeLists.txt  echoClient.cxx  echoServer.cxx
examples/hdrProtocol/: hdrProtocol.h
examples/headerOnly/: CMakeLists.txt  echoClient.cxx  echoServer.cxx
examples/httpClient/: CMakeLists.txt  httpClient.cxx
examples/timeout/: CMakeLists.txt  timeoutClient.cxx  timeoutServer.cxx
include/: bufReader.h  session.h  sessionBuilder.h  sharedBuf.h  tev.h  timer.h  worker.h
include/internal/: baseSession.h  session_.h  streambuf.h  tcpResponse.h  tevdefs.h
include/tcp/: tcpRequest.h  tcpService.h  tcpSession.h
include/tls/: tlsSession.h
src/: CMakeLists.txt  streambuf.cxx  tcpRequest.cxx  tcpResponse.cxx  tcpSession.cxx  tlsSession.cxx
tests/: CMakeLists.txt  sharedBuf.cxx  testBuf.h  timer.cxx
