add_executable(echoServerByBuilder
    echoServer.cxx
)
target_include_directories(echoServerByBuilder 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(echoServerByBuilder 
  PRIVATE
    Threads::Threads
    tev
)

add_executable(echoClientByBuilder
    echoClient.cxx
)
target_include_directories(echoClientByBuilder 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(echoClientByBuilder 
  PRIVATE
    Threads::Threads
    tev
)