add_executable(echoServerHeader
    echoServer.cxx
)
target_include_directories(echoServerHeader 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
)
target_link_libraries(echoServerHeader 
  PRIVATE
    tev
)

add_executable(echoClientHeader
    echoClient.cxx
)
target_include_directories(echoClientHeader 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
)
target_link_libraries(echoClientHeader 
  PRIVATE
    tev
)