add_executable(timeoutServer
    timeoutServer.cxx
)
target_include_directories(timeoutServer 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(timeoutServer 
  PRIVATE
    Threads::Threads
    tev
)

add_executable(timeoutClient
    timeoutClient.cxx
)
target_include_directories(timeoutClient 
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include/asio
    ${PROJECT_SOURCE_DIR}/include
)
target_link_libraries(timeoutClient 
  PRIVATE
    Threads::Threads
    tev
)